# Lopt

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTACT.md  LICENSE  README.md
.github/TEMPLATES/: bug.md  pull_request_template.md
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml
backend/app/: main.py
backend/app/models/: image_model.py  video_model.py
backend/app/models/config/: preprocessor_config.json
backend/app/routes/: playground.py  test.py
frontend/: .dockerignore  Dockerfile  README.md  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: index.css  main.jsx
frontend/src/components/: Carousel.jsx  Footer.jsx  MenuBar.jsx  NavBar.jsx  h4b.jsx  routes.jsx
frontend/src/components/static/: samples.js
frontend/src/components/utility/: Carousel.jsx  CombinedReveal.jsx  CustomCursor.jsx  Details.jsx  Footer.jsx  Header.jsx  Hover.jsx  Loading.jsx  MenuBar.jsx  NavBar.jsx  Reveal1.jsx  Reveal2.jsx  h4b.jsx
frontend/src/hooks/: GlobalContext.jsx  useMousePosition.jsx
frontend/src/lib/: api.js
frontend/src/pages/: About.jsx  Contact.jsx  Dashboard.jsx  Home.jsx  Models.jsx  Playground.jsx  Results.jsx
models/: README.md
models/image/: README.md  pyproject.toml  virtus.ipynb
models/video/: README.md  Scarlet.ipynb
models/video/outputs/: classification_report.txt  metrics.json
